--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "firstapi",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "lint": "eslint --fix test/**",
-    "test": "jest"
+    "start": "nodemon src/server.js",
+    "lint": "eslint --fix src/** test/**",
+    "test": "jest --verbose=true",
+    "testing": "jest --watch --verbose=true"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.1",
+    "nodemon": "^1.3.3",
     "supertest": "^6.2.3"
   }
 }
